fix: use presigned S3 URLs for screenshots in workflow summary
Screenshots were using CloudFront URLs which require JWT authentication,
causing 401 errors when viewing images in GitHub Actions summary.

Now generates presigned S3 URLs that:
- Expire after 1 week (604800 seconds)
- Work without authentication
- Allow images to display in GitHub Actions summary

Fixes issue where screenshot images could not be viewed in the
'Generate Model Summary' GitHub Actions step output.

--- a/.github/workflows/generate-model.yml
+++ b/.github/workflows/generate-model.yml
@@ -186,7 +186,11 @@ jobs:
 
               for SCREENSHOT in $SCREENSHOTS; do
                 NAME="${SCREENSHOT%.png}"
-                URL="${CLOUDFRONT_URL}/screenshots/${MODEL}/${VERSION}/${SCREENSHOT}"
+                S3_KEY="screenshots/${MODEL}/${VERSION}/${SCREENSHOT}"
+
+                # Generate presigned URL that expires in 1 week (604800 seconds)
+                URL=$(aws s3 presign "s3://${{ secrets.S3_BUCKET }}/${S3_KEY}" --expires-in 604800)
+
                 echo "| $NAME | ![$NAME]($URL) |" >> $GITHUB_STEP_SUMMARY
               done
             else
